//
// Copyright 2022 DXOS.org
//

syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package dxos.mesh.teleport.control;

message RegisterExtensionRequest {
  /// Must not contain slashes: /[\w_.]+/. Example: `dxos.mesh.teleport.control`.
  string name = 1;
}

message ControlHeartbeatRequest {
  google.protobuf.Timestamp request_timestamp = 1;
}

message ControlHeartbeatResponse {
  google.protobuf.Timestamp request_timestamp = 1;
}


/// Controls the lifycycle of the teleport session and its exentsions.
service ControlService {
  rpc RegisterExtension (RegisterExtensionRequest) returns (google.protobuf.Empty);
  rpc Heartbeat(ControlHeartbeatRequest) returns (ControlHeartbeatResponse);
}
